syntax = "proto3";

import "graph.proto";

package transport_router_proto;

message RouterSettings
{
	int32 bus_wait_time = 1;      
	double bus_velocity = 2;
}

message RoutesInternalData 
{
	graph_proto.RouteWeight rid_weight = 1;
	oneof prev_edge
	{
		bool nullopt = 2;
		int32 edgeid = 3;
	}
}

message RoutesInternalDataOptional 
{
	oneof optional_data
	{
		bool nullopt = 1;
		RoutesInternalData data = 2;
	}
}

message RoutesInternalDataVector
{
	repeated RoutesInternalDataOptional data = 1;
}

message RouterDataBase 
{
	repeated RoutesInternalDataVector routes_internal_data = 1;
}

message TransportRouter
{	
	graph_proto.DirectedWeightedGraph route_graph = 1;
	map<string, int32> id_by_stopname = 2;
}